test_regress/t/t_randomize.out
%Error-UNSUPPORTED: t/t_randomize.v:11:4: Unsupported: extern constraint
   11 |    extern constraint ex;
      |    ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_randomize.v:29:29: Unsupported: solve before
   29 |    constraint order { solve length before header; }
      |                             ^~~~~~
%Error-UNSUPPORTED: t/t_randomize.v:32:9: Unsupported: dist
   32 |       x dist { [100:102] :/ 1, 200 := 2, 300 := 5, 400};
      |         ^~~~
%Error: Exiting due to
